2000-03-29  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c (dumpScalars): added Sven's patches for
	notifications and scalar groups.

2000-03-21  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/*.c: added dump-xml from Juergen. replaced bcmp by memcmp.
	fixed multiple printing of groups in dump-sming.c.

	* mibs/ietf/: added HOST-RESOURCES-MIB and HOST-RESOURCES-TYPES.

	* lib/data.h: changed //-comment to /* comment */.

	* tools/dump-sming.c: modified quoted string indentation from
	absoulte to relative.

2000-03-20  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/: added SNMP-COMMUNITY-MIB.

2000-03-19  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/: added SLAPM-MIB and SNMP-USM-DH-OBJECTS-MIB.

2000-03-02  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c: A new dump format (it writes separate files
	instead to stdout) has been started for Java AgentX sub-agent code.

2000-02-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.c: Remember the longest common OID prefix of all nodes
	defined in a module. This is used by smiGetFirstNode() and
	smiGetNextNode() to limit the searched subtree.

	* lib/smi.h.in: Dropped SmiValueformat. The way a value is
	specified in a module file is no longer visible at the API.

2000-02-24  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed basetype in default value SmiValue
	structs.

	* tools/dump-smi.c (getValueString): fixed printing of zero-length
	binary and hexadecimal strings in several dump modules. fixed
	braces in BITS default values.

	* lib/parser-smi.y (checkDefvals): OID DEFVALs are now
	represented as a string of the form ``Module::name'' with
	SmiValueformat == SMI_VALUEFORMAT_NAME.

	* lib/scanner-smi.l: Juergen applied some *enormous* scanner
	speedup patches.

	* lib/smi.h.in: A new flag SMI_FLAG_NODESCR can be used to
	suppress storage of descriptions and references in memory.

2000-02-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
